<resources>
    <string name="app_name">hotel-mobile</string>
    <string name="back_to_intro">back to intro</string>
    <string name="register">Register</string>
    <string name="welcome">Welcome</string>
    <string name="create_an_account">Create an account, It’s free</string>
    <string name="already_have_account">Already have an account? </string>
    <string name="log_in">Log In</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="email_hint">Enter your email</string>
    <string name="email">Email</string>
    <string name="password_hint">Enter your password</string>
    <string name="password">Password</string>
    <string name="confirm_password_hint">Enter your Confirm password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="gender">Gender</string>
    <string name="birth_date">Birth Date</string>
    <string name="title_activity_intro">IntroActivity</string>
    <string name="traveloka_image">Traveloka image</string>
    <string name="intro_image">Intro image</string>
    <string name="intro_text">Let’s search cheap hotels in 3 easy steps here!</string>
    <string name="tagar_text">#MulaiAjaDuluTravelokaKemudian”</string>
    <string name="let_s_start">Let’s Start!</string>
    <string name="culture_sightseeing">Culture Sightseeing</string>
    <string name="family_vacation">Family vacation</string>
    <string name="holiday_or_leisure">Holiday/Leisure</string>
    <string name="medical_travel">Medical Travel</string>
    <string name="staycation">Staycation</string>
    <string name="backpacking">Backpacking</string>
    <string name="transit">Transit</string>
    <string name="shopping_and_cullinary"><![CDATA[Shopping & Culinary]]></string>
    <string name="business_trip">Business Trip</string>
    <string name="romantic_vacation">Romantic Vacation</string>
    <string name="add_location">Add Location</string>
    <string name="find_your_destination">Find your destination</string>
    <string name="search">Search</string>
    <string name="travel_purpose">Travel purpose</string>
    <string name="sign_in">Sign in</string>
    <string name="welcome_back">Welcome back</string>
    <string name="lets_explore_the_world">Let\'s explore the world</string>
    <string name="dont_have_account">Don’t have an account?</string>
</resources>